--- a/MentoriaClient/src/app/app.component.html
+++ b/MentoriaClient/src/app/app.component.html
@@ -23,7 +23,7 @@
       <td>
         <button class="btn btn-primary">Edit</button>
         <span class="p-1">
-          <button class="btn btn-danger">Delete</button>
+          <button class="btn btn-danger" (click)="deleteCustomer(country.id)">Delete</button>
       </span>
       </td>
 		</tr>
